feat: add core ui elements for AnalysisResultComponent

--- a/frontend/text-analyzer-app/src/components/analysis-result/analysis-result.component.html
+++ b/frontend/text-analyzer-app/src/components/analysis-result/analysis-result.component.html
@@ -1,1 +1,31 @@
-<p>analysis-result works!</p>
+<main class="main">
+  <h2 class="list-title">Analysis Results</h2>
+
+  <mat-list role="list" class="analysis-result-list">
+    <mat-list-item>
+      <span matListItemTitle class="list-item-title"
+        >Analysis Result 3 for Vowels and Consonants</span
+      >
+      <span matListItemLine>Letter 'A' appears 1 times</span>
+      <span matListItemLine>Letter 'E' appears 1 times</span>
+      <span matListItemLine>Letter 'H' appears 1 times</span>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+
+    <mat-list-item>
+      <span matListItemTitle class="list-item-title"
+        >Analysis Result 2 for Vowels</span
+      >
+      <span matListItemLine>Letter 'A' appears 1 times</span>
+      <span matListItemLine>Letter 'E' appears 1 times</span>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+
+    <mat-list-item>
+      <span matListItemTitle class="list-item-title"
+        >Analysis Result 1 for Consonants</span
+      >
+      <span matListItemLine>Letter 'H' appears 1 times</span>
+    </mat-list-item>
+  </mat-list>
+</main>
