refactor: change analyzer type by only allowing one type at a time not mulitple as previously

--- a/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
+++ b/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
@@ -16,9 +16,9 @@
         <mat-button-toggle-group
           name="analysisMode"
           aria-label="Analysis Mode"
-          [value]="selectedValues"
+          [hideSingleSelectionIndicator]="hideSingleSelectionIndicator()"
+          [value]="selectedValue"
           (change)="onSelectionChange($event)"
-          multiple
         >
           <mat-button-toggle value="Vowels">Vowels</mat-button-toggle>
           <mat-button-toggle value="Consonants">Consonants</mat-button-toggle>
