refactor: change analysis to analyzer in frontend files

--- a/frontend/text-analyzer-app/src/app/app.component.html
+++ b/frontend/text-analyzer-app/src/app/app.component.html
@@ -4,6 +4,6 @@
   </header>
   <section class="content">
     <app-user-input></app-user-input>
-    <app-analysis-result></app-analysis-result>
+    <app-analyzer-result></app-analyzer-result>
   </section>
 </main>
