--- a/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.html
+++ b/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.html
@@ -1,10 +1,10 @@
 <main class="main">
-  <h2 class="list-title">Analysis Results</h2>
+  <h2 class="list-title">Analyzer Results</h2>
 
-  <mat-list role="list" class="analysis-result-list">
+  <mat-list role="list" class="analyzer-result-list">
     <mat-list-item>
       <span matListItemTitle class="list-item-title"
-        >Analysis Result 3 for Vowels and Consonants</span
+        >Analyzer Result 3 for Vowels and Consonants</span
       >
       <span matListItemLine>Letter 'A' appears 1 times</span>
       <span matListItemLine>Letter 'E' appears 1 times</span>
@@ -14,7 +14,7 @@
 
     <mat-list-item>
       <span matListItemTitle class="list-item-title"
-        >Analysis Result 2 for Vowels</span
+        >Analyzer Result 2 for Vowels</span
       >
       <span matListItemLine>Letter 'A' appears 1 times</span>
       <span matListItemLine>Letter 'E' appears 1 times</span>
@@ -23,7 +23,7 @@
 
     <mat-list-item>
       <span matListItemTitle class="list-item-title"
-        >Analysis Result 1 for Consonants</span
+        >Analyzer Result 1 for Consonants</span
       >
       <span matListItemLine>Letter 'H' appears 1 times</span>
     </mat-list-item>
