fix: small typo in UserInputComponent

--- a/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
+++ b/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
@@ -14,7 +14,7 @@
       <div class="user-input-button-row">
         <!-- Toggle Group for Mode Selection of the Analyzer -->
         <mat-button-toggle-group
-          analyzerMode="analyzerMode"
+          name="analyzerMode"
           aria-label="Analyzer Mode"
           [hideSingleSelectionIndicator]="hideSingleSelectionIndicator()"
           [value]="selectedValue"
