feat: add ngModel to UserInputComponent for ui elements

--- a/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
+++ b/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
@@ -1,11 +1,12 @@
 <main class="main">
   <section>
-    <form class="user-input-form">
+    <form class="user-input-form" (ngSubmit)="onSubmit()">
       <mat-form-field class="user-input-full-width">
         <mat-label>Enter text to analyze</mat-label>
         <textarea
           matInput
           name="inputText"
+          [(ngModel)]="inputText"
           placeholder="Ex. Hello World ..."
           required
         ></textarea>
