feat: add service and interface for handling http post request in UserInputComponent

--- a/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
+++ b/frontend/text-analyzer-app/src/components/user-input/user-input.component.html
@@ -21,8 +21,8 @@
           [value]="selectedValue"
           (change)="onSelectionChange($event)"
         >
-          <mat-button-toggle value="Vowels">Vowels</mat-button-toggle>
-          <mat-button-toggle value="Consonants">Consonants</mat-button-toggle>
+          <mat-button-toggle value="VOWELS">Vowels</mat-button-toggle>
+          <mat-button-toggle value="CONSONANTS">Consonants</mat-button-toggle>
         </mat-button-toggle-group>
 
         <!-- Slide Toggle for Online/Offline Mode / Analyzer Mode -->
