feat: add implementation for saving http response to use across modules, display results of analyzed text in AnalyzerResultComponent

--- a/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.html
+++ b/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.html
@@ -1,31 +1,16 @@
 <main class="main">
-  <h2 class="list-title">Analyzer Results</h2>
+  <h2 *ngIf="result" class="list-title">Analyzer Results</h2>
 
   <mat-list role="list" class="analyzer-result-list">
     <mat-list-item>
       <span matListItemTitle class="list-item-title"
-        >Analyzer Result 3 for Vowels and Consonants</span
+        >Analyzed Text {{ result?.inputText }} for
+        {{ result?.analyzerMode }}</span
       >
-      <span matListItemLine>Letter 'A' appears 1 times</span>
-      <span matListItemLine>Letter 'E' appears 1 times</span>
-      <span matListItemLine>Letter 'H' appears 1 times</span>
+      <span matListItemLine *ngFor="let entry of result?.report | keyvalue">
+        Letter {{ entry.key }} appears {{ entry.value }} times
+      </span>
     </mat-list-item>
     <mat-divider></mat-divider>
-
-    <mat-list-item>
-      <span matListItemTitle class="list-item-title"
-        >Analyzer Result 2 for Vowels</span
-      >
-      <span matListItemLine>Letter 'A' appears 1 times</span>
-      <span matListItemLine>Letter 'E' appears 1 times</span>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-
-    <mat-list-item>
-      <span matListItemTitle class="list-item-title"
-        >Analyzer Result 1 for Consonants</span
-      >
-      <span matListItemLine>Letter 'H' appears 1 times</span>
-    </mat-list-item>
   </mat-list>
 </main>
