--- a/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.css
+++ b/frontend/text-analyzer-app/src/components/analyzer-result/analyzer-result.component.css
@@ -5,8 +5,8 @@
 }
 
 .list-item-title {
-  font-weight: 500;
-  color: #3f51b5;
+  font-weight: 600;
+  color: #333;
 }
 
 .main {
@@ -32,21 +32,36 @@
 }
 
 .user-input {
-  color: rgba(0, 0, 0, 0.823);
   font-style: italic;
+  color: #3f51b5;
 }
 
 .report-content {
-display: flex;
-flex-direction: column
+  display: flex;
+  flex-direction: column;
 }
 
 .report-header {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .report-body {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.analyzer-result-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  overflow-y: auto;
+  max-height: 400px;
+}
+
+.chip-stroked {
+  border: 1px solid #ccc;
+  background: transparent;
+  color: #333;
 }
